Implement `__bounded_iter`
This is an internal helper wrapper that is used for span debug iterations

--- a/libcudacxx/include/cuda/std/detail/libcxx/include/CMakeLists.txt
+++ b/libcudacxx/include/cuda/std/detail/libcxx/include/CMakeLists.txt
@@ -82,6 +82,7 @@ set(files
   __iterator/access.h
   __iterator/advance.h
   __iterator/back_insert_iterator.h
+  __iterator/bounded_iterator.h
   __iterator/concepts.h
   __iterator/data.h
   __iterator/default_sentinel.h
