Implement `ranges::find_if` and `ranges::find_if_not`

--- a/libcudacxx/include/cuda/std/detail/libcxx/include/CMakeLists.txt
+++ b/libcudacxx/include/cuda/std/detail/libcxx/include/CMakeLists.txt
@@ -7,6 +7,8 @@ set(files
   __algorithm/lexicographical_compare.h
   __algorithm/min_element.h
   __algorithm/min.h
+  __algorithm/ranges_find_if_not.h
+  __algorithm/ranges_find_if.h
   __algorithm/ranges_min_element.h
   __algorithm/ranges_min.h
   __algorithm/swap_ranges.h
